# serde-llsd

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
src/de/: binary.rs  mod.rs  notation.rs  xml.rs
src/ser/: binary.rs  mod.rs  notation.rs  xml.rs
