[package]
name = "serde-llsd"
version = "0.2.3"
edition = "2021"
authors = ["John-Nagle <nagle@animats.com>"]
description = "Library for serializing and de-serializing data in Linden Lab Structured Data format. This format is used by Second Life and Open Simulator"
license = "LGPL-2.1 OR LGPL-3.0"
repository = "https://github.com/John-Nagle/serde-llsd.git"
homepage = "https://github.com/John-Nagle/serde-llsd"
documentation = "https://docs.rs/serde_llsd/0.2.1"

[dependencies]	
#   Dependencies upgraded on June 28, 2023.
anyhow = "1"
quick-xml = "0.23"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
base64 = "0.21"
ascii85 = "0.2"
chrono = "0.4"
enum-as-inner = "0.6"
serde = { version = "1", features = ["derive"] }
